# attiny1616-blink

./: Cargo.toml  justfile
.cargo/: config.toml
src/: main.rs
